--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -511,6 +511,10 @@
     <string name="limit_mobile_data_usage_title">Limit resolution when using mobile data</string>
     <string-array name="limit_data_usage_description_list">
         <item>@string/limit_data_usage_none_description</item>
+        <item>2160p60</item>
+        <item>2160p</item>
+        <item>1440p60</item>
+        <item>1440p</item>
         <item>1080p60</item>
         <item>1080p</item>
         <item>720p60</item>
